--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -1,6 +1,6 @@
 {{ define "main" }}
 default/list
   {{ range .Data.Pages }}
-  <h1><a href={{ .Permalink }}>{{ .Title }}</a></h1>
+  <h1><a href={{ .RelPermalink }}>{{ .Title }}</a></h1>
   {{ end }}
 {{ end }}
