--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -2,9 +2,10 @@
 <html>
     {{ partial "head.html" . }}
     <body>
-        {{ partial "side.html" . }}
+        {{ partial "header.html" . }}
         <div class="content">
             {{ block "main" . }}{{ end }}
         </div>
+        {{ partial "footer.html" . }}
     </body>
 </html>
