change mobile font sizes

--- a/assets/scss/index.scss
+++ b/assets/scss/index.scss
@@ -15,6 +15,18 @@ html, body, h1, h2, h3, h4, h5, h6, a {
     color: $font-color;
 }
 
+// h1 {
+//     font-size: 30vw;
+// }
+
+// h2 {
+//     font-size: 20vw;
+// }
+
+// h3 {
+//     font-size: 30vw;
+// }
+
 html, body {
     margin: 0;
     padding: 0;
@@ -83,7 +95,6 @@ body {
     padding-bottom: 30px;
 
     a {
-        font-size: large;
         text-decoration: none;
     }
 
@@ -124,48 +135,65 @@ body {
     bottom: 20px;
     right: 30px;
     z-index: 99;
-    font-size: 18px;
+    font-size: 5vw;
     border: none;
     outline: none;
     background-color: $button-color;
     color: $font-color;
     cursor: pointer;
-    padding: 15px;
+    padding: 3px 15px;
     border-radius: 4px;
-  }
-  
-  #button:hover {
-    background-color: #555;
-  }
 
-/* --- mobile style --- */
-body {
-    flex-direction: column;
-    overflow: auto;
-}
-
-.header {
-    width: 100%;
-    flex-direction: row;
-}
-
-.category {
-    img {
-        width: 90%;
+    :hover {
+        background-color: #555;
     }
 }
+  
+/* --- mobile style --- */
+@media screen and (max-width: 650px) {
 
-.images {
-    > img {
-        height: auto;
+    h1 {
+        font-size: 7vw;
+    }
+    h2, a {
+        font-size: 4vw;
+    }
+
+    body {
+        flex-direction: column;
+        overflow: auto;
+    }
+
+    .header {
         width: 100%;
+        flex-direction: row;
+    }
+
+    .category {
+        img {
+            width: 90%;
+        }
+    }
+
+    .images {
+        > img {
+            height: auto;
+            width: 100%;
+        }
     }
 }
 /* --- end mobile style --- */
 
 
 /* --- desktop style --- */
-@media screen and (min-width: 1000px) {
+@media screen and (min-width: 650px) {
+    
+    h1 {
+        font-size: 3vw;
+    }
+    h2, a {
+        font-size: 2vw;
+    }
 
     body {
         flex-direction: row;
