--- a/layouts/photo/list.html
+++ b/layouts/photo/list.html
@@ -11,7 +11,7 @@
     {{ end }} 
   </div>
 
-  <button onclick="topFunction()" id="button" title="Go to top">↑</button>
+  <button onclick="topFunction()" id="button" title="Go to top">🠑</button>
 
 {{ end }}
 
