--- a/assets/scss/index.scss
+++ b/assets/scss/index.scss
@@ -150,7 +150,7 @@ body {
 }
   
 /* --- mobile style --- */
-@media only screen and (max-width: 800px) {
+@media only screen and (max-width: 900px) {
 
     h1 {
         font-size: 7vw;
@@ -186,13 +186,13 @@ body {
 
 
 /* --- desktop style --- */
-@media only screen and (min-width: 800px) {
+@media only screen and (min-width: 901px) {
     
     h1 {
-        font-size: 3vw;
+        font-size: 35px;
     }
     h2, a {
-        font-size: 2vw;
+        font-size: 20px;
     }
 
     body {
